Implemented filter pool, tiebreaker, and allocation policy. Created a full suite of manual policies to try out.