@@ -1,6 +1,5 @@
 package gpdarp.decisionprocess;
 
-import gpdarp.core.Arc;
 import gpdarp.core.Request;
 import gpdarp.core.Vehicle;
 import gpdarp.decisionprocess.poolfilter.IdentityPoolFilter;
@@ -69,17 +68,17 @@ public abstract class AllocationPolicy {
         List<Vehicle> pool = rds.getPool();
         DecisionProcessState state = rds.getState();
 
-        List<Vehicle> filteredPool = poolFilter.filter(pool, state);
+        List<Vehicle> filteredPool = poolFilter.filter(pool, request, state);
 
         if (filteredPool.isEmpty())
             return null;
 
-        Vehicle next = filteredPool.get(0);
-        next.setPriority(priority(next, state));
+        Vehicle next = filteredPool.getFirst();
+        next.setPriority(priority(next, request, state));
 
         for (int i = 1; i < filteredPool.size(); i++) {
             Vehicle tmp = filteredPool.get(i);
-            tmp.setPriority(priority(tmp, state));
+            tmp.setPriority(priority(tmp, request, state));
 
             if (Double.compare(tmp.getPriority(), next.getPriority()) < 0 ||
                     (Double.compare(tmp.getPriority(), next.getPriority()) == 0 &&
@@ -94,9 +93,10 @@ public abstract class AllocationPolicy {
      * Calculate the priority of a candidate vehicle for a request given a state.
      *
      * @param candidate the candidate vehicle.
+     * @param request the given request.
      * @param state the state.
      *
      * @return the priority of the candidate task.
      */
-    public abstract double priority(Vehicle candidate, DecisionProcessState state);
+    public abstract double priority(Vehicle candidate, Request request, DecisionProcessState state);
 }
