@@ -1,6 +1,8 @@
 package gpdarp.decisionprocess.allocationpolicy.ensemble.combiner;
 
 import gpdarp.core.Arc;
+import gpdarp.core.Request;
+import gpdarp.core.Vehicle;
 import gpdarp.decisionprocess.DecisionProcessState;
 import gpdarp.decisionprocess.allocationpolicy.ensemble.EnsemblePolicy;
 import gpdarp.decisionprocess.allocationpolicy.ensemble.Combiner;
@@ -10,18 +12,19 @@ import java.util.List;
 /**
  * The aggregator combiner simply sums up the weighted priority calculated by all the elements,
  * and set the final priority as the weighted sum.
+ *
+ * @author gphhucarp, William Huang
  */
-
 public class Aggregator extends Combiner {
 
     @Override
-    public Arc next(List<Arc> pool, NodeSeqRoute route, DecisionProcessState state, EnsemblePolicy ensemblePolicy) {
-        Arc next = pool.get(0);
-        next.setPriority(priority(next, route, state, ensemblePolicy));
+    public Vehicle next(List<Vehicle> pool, Request request, DecisionProcessState state, EnsemblePolicy ensemblePolicy) {
+        Vehicle next = pool.getFirst();
+        next.setPriority(priority(next, request, state, ensemblePolicy));
 
         for (int i = 1; i < pool.size(); i++) {
-            Arc tmp = pool.get(i);
-            tmp.setPriority(priority(tmp, route, state, ensemblePolicy));
+            Vehicle tmp = pool.get(i);
+            tmp.setPriority(priority(tmp, request, state, ensemblePolicy));
 
             if (Double.compare(tmp.getPriority(), next.getPriority()) < 0 ||
                     (Double.compare(tmp.getPriority(), next.getPriority()) == 0 &&
@@ -33,17 +36,20 @@ public class Aggregator extends Combiner {
     }
 
     /**
-     * Calculate the priority of a candidate arc by an ensemble policy.
-     * @param arc the arc whose priority is to be calculated.
-     * @param route the route.
+     * Calculate the priority of a candidate vehicle by an ensemble policy.
+     *
+     * @param vehicle the vehicle whose priority is to be calculated.
+     * @param request the request to be allocated.
      * @param state the decision process state.
      * @param ensemblePolicy the ensemble policy.
-     * @return the priority of the arc calculated by the ensemble policy.
+     *
+     * @return the priority of the vehicle calculated by the ensemble policy.
      */
-    private double priority(Arc arc, NodeSeqRoute route, DecisionProcessState state, EnsemblePolicy ensemblePolicy) {
+    private double priority(Vehicle vehicle, Request request, DecisionProcessState state,
+                            EnsemblePolicy ensemblePolicy) {
         double priority = 0;
         for (int i = 0; i < ensemblePolicy.size(); i++) {
-            priority += ensemblePolicy.getPolicy(i).priority(arc, route, state) *
+            priority += ensemblePolicy.getPolicy(i).priority(vehicle, request, state) *
                     ensemblePolicy.getWeight(i);
         }
 
